--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
         stage('Test Application') {
             steps {
                 sh 'chmod +x ./001_test_application.sh && ./001_test_application.sh'
-                junit testResultsFile:"server/report.xml"
+                junit 'server/report.xml'
             }
         }
 
