fixing some more...

--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
 
         stage('Test Application') {
             steps {
-                sh 'chmod +x ./001_test_application.sh && ./001_test_application.sh'
+                sh 'chmod +x server/001_test_application.sh && server/001_test_application.sh'
                 sh 'go version'
                 junit 'server/report.xml'
             }
