--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -26,20 +26,20 @@ EXPOSE 8000
 # ------------------------------
 # Builder image for production
 # ------------------------------
-FROM base AS builder
-
-WORKDIR /app/cmd/web
-
-RUN CGO_ENABLED=0 go build -o /app/bin/golang-react-todo-app
+#FROM base AS builder
+#
+#WORKDIR /app/cmd/web
+#
+#RUN CGO_ENABLED=0 go build -o /app/bin/golang-react-todo-app
 
 # ------------------------------
 # Final production image
 # ------------------------------
-FROM scratch AS production
-
-WORKDIR /app
-
-COPY --from=builder /app/bin/golang-react-todo-app ./bin/golang-react-todo-app
-COPY pkg/repository/data/ ./pkg/repository/data/
-
-EXPOSE 8000
+#FROM scratch AS production
+#
+#WORKDIR /app
+#
+#COPY --from=builder /app/bin/golang-react-todo-app ./bin/golang-react-todo-app
+#COPY pkg/repository/data/ ./pkg/repository/data/
+#
+#EXPOSE 8000
