--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,10 +5,10 @@ FROM golang:1.24-alpine AS base
 
 WORKDIR /app
 
-COPY server/go.mod server/go.sum ./
+COPY go.mod go.sum ./
 RUN go mod download
 
-COPY ./server .
+COPY . .
 
 # ------------------------------
 # Development image
@@ -26,20 +26,20 @@ EXPOSE 8000
 # ------------------------------
 # Builder image for production
 # ------------------------------
-#FROM base AS builder
-#
-#WORKDIR /app/cmd/web
-#
-#RUN CGO_ENABLED=0 go build -o /app/bin/golang-react-todo-app
+FROM base AS builder
+
+WORKDIR /app/cmd/web
+
+RUN CGO_ENABLED=0 go build -o /app/bin/golang-react-todo-app
 
 # ------------------------------
 # Final production image
 # ------------------------------
-#FROM scratch AS production
-#
-#WORKDIR /app
-#
-#COPY --from=builder /app/bin/golang-react-todo-app ./bin/golang-react-todo-app
-#COPY pkg/repository/data/ ./pkg/repository/data/
-#
-#EXPOSE 8000
+FROM scratch AS production
+
+WORKDIR /app
+
+COPY --from=builder /app/bin/golang-react-todo-app ./bin/golang-react-todo-app
+COPY pkg/repository/data/ ./pkg/repository/data/
+
+EXPOSE 8000
